# omni-agent-hub-with-gemini-live

./: .gitignore  404.html  ARCHITECTURE_IMPLEMENTATION_PLAN.md  README.md  dummy_auth_creds.txt  firebase.json  firestore.indexes.json  future.features.txt  future.txt  index.html  localmcp_and_notification_architecture.md  mermaidDG.txt  mkdocs.yml  sitemap.xml  some imp info.txt
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  cloud-run-env.yaml  dev.py  pyproject.toml  test-output.txt
backend/app/: config.py  main.py
backend/app/agents/: agent_factory.py  cross_client_agent.py  personas.py  root_agent.py  task_architect.py  task_planner_tool.py
backend/app/api/: auth.py  clients.py  gallery.py  health.py  init.py  mcp.py  personas.py  plugins.py  router.py  scheduled_tasks.py  scheduler.py  sessions.py  tasks.py  ws_events.py  ws_live.py
backend/app/mcps/: arxiv.json  brave-search.json  cloud-sql.json  context7.json  filesystem.json  github.json  google-maps.json  health.json  home-assistant.json  linear.json  medium.json  notion.json  playwright.json  slack.json  substack.json  travel.json
backend/app/middleware/: agent_callbacks.py  auth_middleware.py  cors.py  rate_limit.py
backend/app/models/: client.py  mcp.py  persona.py  planned_task.py  plugin.py  session.py  ws_messages.py
backend/app/plugins/: TEMPLATE.py  google_calendar_plugin.py  rag_plugin.py  (+3 more)
backend/scripts/: local_mcp_server.py  test_all_features.py  test_image_gen.py  test_plugins.py  test_task_system.py
backend/test_output/: token.txt
backend/tests/: conftest.py
(+217 files in other folders)
