[project]
name = "omni-backend"
version = "0.1.0"
description = "Omni — Multi-client AI agent hub backend (FastAPI + ADK + Socket.IO)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core AI ---
    "google-adk>=0.5.0",
    "google-genai>=1.0.0",
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # --- Socket.IO (replaces raw WebSocket) ---
    "python-socketio[asyncio]>=5.11.0",
    # --- Firebase / GCP ---
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-storage>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-logging>=3.10.0",
    "google-cloud-trace>=1.12.0",
    # --- E2B Sandbox ---
    "e2b-code-interpreter>=1.0.0",
    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
